# feitoria-csv

./: .gitignore  feitoria-csv.cabal  stack.yaml
app/: Main.hs
src/Feitoria/: CSV.hs
