name:                feitoria-csv
version:             0.1.0.0
synopsis:            Converts CSV files to Feitoria table files.
description:         Please see README.md
homepage:            http://github.com/MadSciGuys/feitoria-csv
license:             BSD3
license-file:        LICENSE
author:              Steve Demos, Michael Swan
maintainer:          stphndemos@gmail.com
copyright:           2016 Steve Demos, Michael Swan
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Feitoria.CSV
  build-depends:       base >= 4.7 && < 5
                     -- , feitoria
  default-language:    Haskell2010

executable feitoria-csv-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , bytestring
                     , directory
                     , feitoria
                     , feitoria-csv
                     , text
  default-language:    Haskell2010

test-suite feitoria-csv-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , feitoria-csv
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/feitoria-csv
